--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#E1E1E1"
     android:fitsSystemWindows="true"
-    tools:context=".activities.ScrollingActivity">
+    tools:context=".activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
