--- a/app/src/main/res/menu/filter_done.xml
+++ b/app/src/main/res/menu/filter_done.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/filter_done_action"
+        android:title="@string/filter_done"
+        app:showAsAction="always" />
 </menu>
