--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -15,6 +15,14 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:subtitleTextAppearance="@style/ToolbarTitle"
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:layout_gravity="top" />
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
@@ -31,14 +39,6 @@
                 layout="@layout/search_header_layout" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:subtitleTextAppearance="@style/ToolbarTitle"
-            android:visibility="gone"
-            android:layout_gravity="top" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
